@@ -1,3 +1,4 @@
+- Email: Fixed problem with saving attachments of linked emails.
 - Check if fopen succeeded to prevent infinite loop
 - Calendar: recurring event dialog now also works in List Grid.
 - Workflow: Fixed: When disapproved: email and reminder for workflow starter and for workflow owner.
